--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -14,3 +14,13 @@
 		padding: 60px 16px 40px 16px;
 	}
 }
+
+/* 加载到上层的页面的布局样式 */
+.above-loaded-page {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 999999;
+}
